MDEV-13825 mariabackup --lock-ddl-per-table does not properly lock FULLTEXT auxiliary tables

Change the logic to take mdl lock on all tables before tablespaces are
copied, rather than  lock every single tablespace just before it is
copied.